Your update message

--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
     <div class="left-panel">
       <img src="University-Logo-backup.png" alt="GIET Logo">
       <h2>GIET UNIVERSITY</h2>
-      <p>All GIET students' photos<br>in one place.</p>
+      <p>All GIET student's photos<br>in one place.</p>
     </div>
 
     <div class="right-panel">
