--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>GIET Photo Viewer</title>
+  <title>GIET ERP PHOTO</title>
+  <link rel="icon" type="image/png" href="./favicon.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
   <style>
     * {
@@ -273,7 +276,7 @@
     </div>
 
     <div class="right-panel">
-      <h1>GIET Student Photo Viewer</h1>
+      <h1>GIET Erp Photo</h1>
       <div class="form-group">
         <label for="batch">Batch:</label>
         <select id="batch">
