--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="description" content="GIET Student Photo Viewer – Browse student photos by roll number, batch and branch.">
+  <meta name="keywords" content="GIET,giet erp photo, giet student photo, giet erp ,ERP, Student Photos, Roll Number, Branch, Batch, Viewer">
+  <meta name="robots" content="index, follow">
+  <link rel="canonical" href="https://giet-erp-photo.netlify.app/" />
+
   <title>GIET ERP PHOTO</title>
   <link rel="icon" type="image/png" href="./favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
