--- a/index.html
+++ b/index.html
@@ -9,273 +9,17 @@
   <link rel="canonical" href="https://giet-erp-photo.netlify.app/" />
 
   <title>GIET ERP PHOTO</title>
-  <link rel="icon" type="image/png" href="./favicon.png">
+  <link rel="icon" type="image/png" href="Image/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-
-    body {
-      margin: 0;
-      padding: 20px 0;
-      font-family: 'Inter', sans-serif;
-      background: url('campus-overview-on-hill.jpg') no-repeat center center fixed;
-      background-size: cover;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .container {
-      display: flex;
-      width: 95%;
-      max-width: 600px;
-      border-radius: 16px;
-      overflow: hidden;
-      box-shadow: 0 0 20px rgba(0, 0, 0, 0.25);
-      background-color: white;
-      animation: fadeSlideDown 1s ease forwards;
-      opacity: 0;
-      flex-direction: row;
-    }
-
-    .left-panel {
-      background-color: #000;
-      color: #fff;
-      flex: 1;
-      padding: 20px 10px;
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-    }
-
-    .left-panel img {
-      width: 95px;
-      margin-bottom: 10px;
-    }
-
-    .left-panel h2 {
-      font-size: 1.1rem;
-      margin-bottom: 8px;
-    }
-
-    .left-panel p {
-      font-family: 'Pacifico', cursive;
-      font-size: 1.1rem;
-      color: #ffe082;
-    }
-
-    .right-panel {
-      flex: 1;
-      background-color: #fff;
-      padding: 20px 15px;
-    }
-
-    .right-panel h1 {
-      text-align: center;
-      font-size: 1.2rem;
-      color: #333;
-      margin-bottom: 15px;
-      font-weight: 1000;
-    }
-
-    .form-group {
-      margin-bottom: 10px;
-    }
-
-    label {
-      font-weight: 600;
-      display: block;
-      margin-bottom: 4px;
-    }
-
-    select, input {
-      width: 100%;
-      padding: 8px;
-      border: 2px solid #6366F1;
-      border-radius: 6px;
-      font-size: 0.95rem;
-    }
-
-    .input-pair {
-      display: flex;
-      gap: 10px;
-    }
-
-    #startRoll, #endRoll {
-      width: 100%;
-    }
-
-    button {
-      margin-top: 10px;
-      width: 100%;
-      padding: 9px;
-      background-color: #6366F1;
-      color: white;
-      font-weight: bold;
-      font-size: 0.95rem;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    button:hover {
-      background-color: #3f83f8;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 25px;
-      width: 95%;
-    }
-
-    .card {
-      width: 180px;
-      border: 1px solid #ddd;
-      padding: 10px;
-      border-radius: 8px;
-      background-color: #fff;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-      opacity: 0;
-      animation: slideLeftToRight 0.6s ease forwards;
-    }
-
-    .card img {
-      width: 100%;
-      border-radius: 4px;
-    }
-
-    .roll {
-      margin-top: 8px;
-      font-weight: 700;
-      text-align: center;
-    }
-
-    @keyframes slideLeftToRight {
-      from {
-        opacity: 0;
-        transform: translateX(-60px);
-      }
-      to {
-        opacity: 1;
-        transform: translateX(0);
-      }
-    }
-
-    @keyframes fadeSlideDown {
-      from {
-        opacity: 0;
-        transform: translateY(-40px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    @keyframes fadeSlideUp {
-      from {
-        opacity: 0;
-        transform: translateY(40px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
-
-    .footer-animated {
-      text-align: center;
-      margin-top: 18rem;
-      color: white;
-      background-color: rgba(0, 0, 0, 0.5);
-      padding: 10px;
-      font-size: 0.9rem;
-      font-weight: 600;
-      width: 100%;
-      font-family: 'Inter', sans-serif;
-      animation: fadeSlideUp 1.2s ease forwards;
-      opacity: 0;
-    }
-
-    @media (max-width: 768px) {
-      .container {
-        flex-direction: column;
-        width: 85%;
-      }
-
-      .left-panel, .right-panel {
-        padding: 5px 12px;
-      }
-
-      .left-panel img {
-        width: 65px;
-      }
-
-      .left-panel h2 {
-        font-size: 1rem;
-      }
-
-      .left-panel p {
-        font-size: 0.8rem;
-      }
-
-      .right-panel h1 {
-        font-size: 1rem;
-        margin-bottom: 10px;
-      }
-
-      .form-group {
-        margin-bottom: 8px;
-      }
-
-      select, input {
-        padding: 6px;
-        font-size: 0.9rem;
-      }
-
-      button {
-        padding: 8px;
-        font-size: 0.9rem;
-        margin-top: 10px;
-      }
-
-      .input-pair {
-        flex-direction: column;
-        gap: 8px;
-      }
-
-      .card {
-        width: 100%;
-      }
-    }
-
-    @media (max-width: 480px) {
-      .container {
-        width: 80%;
-      }
-
-      .card {
-        width: 100%;
-      }
-    }
-  </style>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
 
   <div class="container">
     <div class="left-panel">
-      <img src="University-Logo-backup.png" alt="GIET Logo">
+      <img src="Image/University-Logo-backup.png" alt="GIET Logo">
       <h2>GIET UNIVERSITY</h2>
       <p>All GIET student's photos<br>in one place.</p>
     </div>
@@ -299,11 +43,18 @@
           <option value="CSEAIML">CSEAIML</option>
           <option value="CSEDS">CSEDS</option>
           <option value="ECE">ECE</option>
+          <option value="EEE">EEE</option>
+          <option value="EE">EE</option>
+          <option value="ME">ME</option>
           <option value="BT">BT</option>
           <option value="BAG">BAG</option>
-          <option value="ME">ME</option>
           <option value="CV">CV</option>
-          <option value="EE">EE</option>
+          <option value="CHE">CHE</option>
+          <option value="BCA">BCA</option>
+          <option value="MCA">MCA</option>
+          <option value="BBA">BBA</option>
+          <option value="MBA">MBA</option>
+          
         </select>
       </div>
 
@@ -317,61 +68,17 @@
   </div>
 
   <div class="gallery" id="photoGallery"></div>
-
-  <script>
-    function showPhotos() {
-      const gallery = document.getElementById("photoGallery");
-      gallery.innerHTML = "";
-
-      const batch = document.getElementById("batch").value;
-      const branch = document.getElementById("branch").value;
-      const start = parseInt(document.getElementById("startRoll").value);
-      const end = parseInt(document.getElementById("endRoll").value);
-
-      if (isNaN(start) || isNaN(end) || start > end || start < 1 || end > 999) {
-        alert("Please enter a valid roll number range from 1 to 999.");
-        return;
-      }
-
-      const prefix = `${batch}${branch}`;
-
-      for (let i = start; i <= end; i++) {
-        const rollNum = i.toString().padStart(3, '0');
-        const fullRoll = `${prefix}${rollNum}`;
-        const imgUrl = `https://gietuerp.in/StudentDocuments/${fullRoll}/${fullRoll}.JPG`;
-
-        const card = document.createElement("div");
-        card.className = "card";
-        card.style.animationDelay = `${(i - start) * 0.1}s`;
-
-        const img = document.createElement("img");
-        img.src = imgUrl;
-        img.alt = fullRoll;
-        img.onerror = function () {
-          this.src = "https://via.placeholder.com/200x250?text=Not+Found";
-        };
-
-        const caption = document.createElement("div");
-        caption.className = "roll";
-        caption.textContent = fullRoll;
-
-        card.appendChild(img);
-        card.appendChild(caption);
-        gallery.appendChild(card);
-      }
-    }
-
-    document.addEventListener("keydown", function (event) {
-      if (event.key === "Enter") {
-        event.preventDefault();
-        showPhotos();
-      }
-    });
-  </script>
-
   <div class="footer-animated">
     © 2025 - Presented by SRM. All rights reserved.
   </div>
+  <script src="index.js"></script>
 
 </body>
 </html>
+
+
+
+
+<!-- git add .
+git commit -m "Your update message"
+git push -->
