Your update message

--- a/index.html
+++ b/index.html
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <meta name="description" content="GIET Student Photo Viewer – Browse student photos by roll number, batch and branch.">
-  <meta name="keywords" content="GIET,giet erp photo, giet student photo, giet erp ,ERP, Student Photos, Roll Number, Branch, Batch, Viewer">
+  <meta name="description" content="View GIET University ERP photos. Built by SRM.">
+  <meta name="keywords" content="GIET ERP, GIET photo, ERP photo, GIET University, Giet erp photo, GIET University photos, GIET student photos, GIET University ERP, GIET University student photos">
+  <meta property="og:title" content="GIET ERP Photo" />
+  <meta property="og:image" content="https://giet-erp-photo.netlify.app/Image/University-Logo-backup.png" />
+  <meta property="og:url" content="https://giet-erp-photo.netlify.app/" />
+  <meta property="og:type" content="website" />
+
+
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://giet-erp-photo.netlify.app/" />
 
@@ -14,6 +20,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Pacifico&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="index.css">
+  <meta name="google-site-verification" content="Z-mAjMiWvWDVWRTseEjT_z4FtCZY6LueUi_safRjOEQ" />
 </head>
 <body>
 
