Your update message

--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
   <meta property="og:image" content="https://giet-erp-photo.netlify.app/Image/University-Logo-backup.png" />
   <meta property="og:url" content="https://giet-erp-photo.netlify.app/" />
   <meta property="og:type" content="website" />
-
-
+  <meta property="og:site_name" content="GIET ERP PHOTO">
   <meta name="robots" content="index, follow">
   <link rel="canonical" href="https://giet-erp-photo.netlify.app/" />
-
   <title>GIET ERP PHOTO</title>
   <link rel="icon" type="image/png" href="Image/favicon.png">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
